--- a/tex/abs_esp.tex
+++ b/tex/abs_esp.tex
@@ -4,7 +4,7 @@
 %\vspace{1cm}
 \chapter*{\runtitulo}
 
-\noindent En este trabajo estudiamos una construcción, publicada por Donald Knuth en 1965, la cual produce una secuencia de números reales completamente equidistribuidos. La noción de equidistribución completa se utiliza en su sentido clásico; es decir, que para una secuencia dada, todas sus subsecuencias finitas y contiguas de cualquier longitud presentan una distribución uniforme. En un artículo de 1963, Joel Franklin considera esta propiedad como un primer requerimiento de pseudoaleatoriedad para secuencias determinísticas, y prueba que la equidistribución completa implica muchas otras propiedades importantes de las secuencias aleatorias. El trabajo de Knuth se basa en secuencias de De Bruijn, las cuales muestran también una relación cercana con la noción de equidistribución, y pueden ser generadas por el algoritmo FKM (Fredricksen, Kessler, Maiorana, 1978) en tiempo constante amortizado. Presentamos una variante de su secuencia mediante una construcción similar (aunque más sencilla) y damos una prueba elemental mostrando que la secuencia generada también es completamente equidistribuida.
+\noindent En este trabajo estudiamos una construcción, publicada por Donald Knuth en 1965, la cual produce una secuencia de números reales completamente equidistribuidos. La noción de equidistribución completa se utiliza en su sentido clásico; es decir, que para una secuencia dada, todas sus subsecuencias finitas y contiguas de cualquier longitud presentan una distribución uniforme. En un artículo de 1963, Joel Franklin considera esta propiedad como un primer requerimiento de pseudoaleatoriedad en secuencias determinísticas, y prueba que la equidistribución completa implica muchas otras propiedades importantes de las secuencias aleatorias. El trabajo de Knuth se basa en secuencias de De Bruijn, las cuales muestran también una relación cercana con la noción de equidistribución, y pueden ser generadas por el algoritmo FKM (Fredricksen, Kessler, Maiorana, 1978) en tiempo constante amortizado. Presentamos una variante de su secuencia mediante una construcción similar (aunque más sencilla) y damos una prueba elemental mostrando que la secuencia generada también es completamente equidistribuida.
 
 \bigskip
 
