--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -180,7 +180,7 @@ See \cite{tijdeman-1975}, pages 7 and 48, for proof of these statements.
 
 \section{De Bruijn Sequences and Ford Sequences}
 
-De Bruijn sequences are well-studied sequences from the field of combinatorics on words; see \cite{berstel-2007} for a historical introduction. Their properties are relevant to equidistribution since for any $k$ one can always obtain a $k$-distributed sequence simply by extending a De Bruijn sequence of order $k$ naturally into a periodic sequence. Having been originally defined over a binary alphabet and later generalized to larger alphabets, their definition varies slightly accross the literature. Throughout this work, we use these terms according to the following definitions.
+De Bruijn sequences are well-studied sequences from the field of combinatorics on words; see \cite{berstel-2007} for a historical introduction. Their properties are relevant to equidistribution since for any positive integer $k$ one can always obtain a $k$-distributed sequence simply by extending a De Bruijn sequence of order $k$ into a periodic sequence. Having been originally defined over a binary alphabet and later generalized to larger alphabets, their definition varies slightly accross the literature. Throughout this work, we use these terms according to the following definitions.
 
 \begin{definition*}
   A $b$-ary De Bruijn sequence of order $k$ is any sequence of length $b^k$ which, when viewed as a cycle, contains every possible $b$-ary sequence of length $k$ exactly once as a contiguous subsequence.
@@ -212,7 +212,7 @@ In general, there exist a total of $\frac{(b!)^{b^{k - 1}}}{b^k}$ different $b$-
 
 A simple algorithm for producing a $b$-ary De Bruijn sequence of order $k$ is as follows. First, set $x_1 = x_2 = \dots = x_k = 0$. Then, pick $x_{k + i} \in \left\{ 0, 1, \dots, b - 1 \right\}$ for $i = 1 \dots b^k - k$ according to the following rules: i) $x_{1 + i}, \dots, x_{k + i}$ does not duplicate any previous contiguous subsequence of size $k$, and ii) $x_{k + i} = 0$ only when no other options are available that satisfy rule i).
 
-The algorithm as stated above is attributed by Knuth \cite{knuth-1965} to an unpublished manuscript from 1957 by Ford \cite{ford-1957}. However, according to a survey by Fredricksen in \cite{fredricksen-1982}, multiple variants of the same algorithm can be found in the literature tracing back to 1934 in a paper by Martin \cite{martin-1934}. In chapter \ref{chapter:cesbofs}, we use lexicographically least De Bruijn sequences for constructing completely equidistributed sequences, to which we refer as Ford sequences following Fredricksen.
+The algorithm as stated above is given by Knuth in \cite{knuth-1965} and attributed to an unpublished manuscript from 1957 by Ford \cite{ford-1957}. However, according to a survey by Fredricksen in \cite{fredricksen-1982}, multiple variants of the same algorithm can be found in the literature tracing back to 1934 in a paper by Martin \cite{martin-1934}. In chapter \ref{chapter:cesbofs}, we use lexicographically least De Bruijn sequences for constructing completely equidistributed sequences, to which we refer as Ford sequences following the work by Fredricksen.
 
 \begin{definition*}
   A $b$-ary Ford sequence of order $k$, denoted $F^{(b, k)}$, is the lexicographically least $b$-ary De Bruijn sequence of order $k$.
@@ -222,15 +222,17 @@ The algorithm as stated above is attributed by Knuth \cite{knuth-1965} to an unp
   The first sequences in each of the examples above are, respectively, the binary Ford sequence of order 3, and the 4-ary Ford sequence of order 2.
 \end{exmp*}
 
-In \cite{fredricksen-1978}, Fredricksen and Maiorana extend a previous result by Fredricksen and Kessler, introducing an algorithm to generate a $b$-ary Ford sequence of order $k$. Ruskey, Savage, and Wang later refer to this algorithm as the FKM (Fredricksen, Kessler, Maiorana) algorithm, and prove that it has a constant amortized running time (see \cite{ruskey-1991}).
+In \cite{fredricksen-1978}, Fredricksen and Maiorana introduce an algorithm to generate a $b$-ary Ford sequence of order $k$ extending previous work by Fredricksen and Kessler. Ruskey, Savage, and Wang later refer to this algorithm as the FKM (Fredricksen, Kessler, Maiorana) algorithm, and prove that it has a constant amortized running time (see \cite{ruskey-1991}).
 
 \chapter{Completely Equidistributed Sequences Based on De Bruijn Sequences}\label{chapter:cesbofs}
 
-In this chapter, we first present the completely equidistributed sequence given by Knuth in \cite{knuth-1965}. Next, we discuss different aspects of the given construction and motivate the variant introduced in section \ref{section:lias}. We then state the main result of this work about the complete equidistribution of the newly introduced sequence, and provide an elementary proof based only on the defining characteristic of De Bruijn sequences. Finally, we present a simpler alternative proof based on Weyl's Criterion and a proposition from the theory of linear modular congruences.
+In this chapter, we first present the completely equidistributed sequence given by Knuth in \cite{knuth-1965}. Next, we discuss the given construction and motivate the variant introduced in section \ref{section:lias}. We then state the main result of this work about the complete equidistribution of the newly introduced sequence, and provide an elementary proof of this fact based only on the defining characteristic of De Bruijn sequences. Finally, we present a simpler alternative proof based on Weyl's Criterion and a proposition from the theory of linear modular congruences.
 
 \section{Knuth's Sequence}\label{section:knuth-sequence}
 
-We define Knuth's sequence, denoted as $K$, following the construction presented in \cite{knuth-1965}. In its original formulation, the sequence $K$ can be constructed using any given family of De Bruijn sequences. Here, we specifically use Ford sequences since they are easily defined in a univocal manner and can be generated efficiently. Given a natural number $n$, we define:
+We define Knuth's sequence, denoted as $K$, following the construction presented in \cite{knuth-1965}. In its original formulation, the sequence $K$ can be constructed using any given family of De Bruijn sequences. Here, we specifically use Ford sequences since they are easily defined in a univocal manner and can be generated efficiently.
+
+Given a natural number $n$, we define:
 
 i) an $A$ sequence of order $n$, denoted $A^{(n)}$, as the finite sequence of rational numbers obtained from dividing by $2^n$ each of the terms in a $2^n$-ary Ford sequence of order $n$:
 
@@ -281,7 +283,9 @@ In the next section, we show that it is possible to construct the sequence using
 
 \section{Linearly Increasing Alphabet Sizes}\label{section:lias}
 
-We now provide a variant of Knuth's sequence based on Ford sequences with linearly increasing alphabet sizes. Within the current section, consider $t : \mathbb{N} \mapsto \mathbb{N}$ to be an arbitrary but fixed function. Later, we study which conditions $t$ must satisfy in order for the generated sequence to be completely equidistributed. Similar to the previous section, we define for any given natural number $n$:
+We now provide a variant of Knuth's sequence based on Ford sequences with linearly increasing alphabet sizes. Within the current section, consider $t : \mathbb{N} \mapsto \mathbb{N}$ to be an arbitrary but fixed function. Later, we study which conditions $t$ must satisfy in order for the generated sequence to be completely equidistributed.
+
+Similar to the previous section, we define for any given natural number $n$:
 
 i) a $C$ sequence of order $n$, denoted $C^{(n)}$, as the finite sequence of rational numbers obtained from dividing by $n$ each of the terms in an $n$-ary Ford sequence of order $n$:
 
